replaced rule based agent with llm and removed venv from tracking

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,57 +1,41 @@
-
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
 *.pkl
 *.pklz
-
-
-*.pyc
-*.pyo
-*.pyd
 *.pdb
-
 *.env
 .env.*
 !.env.example
-
-
 *.log
 logs/
 *.pid
-
-
+venv/
+.venv/
 .vscode/
 .idea/
 *.sublime-project
 *.sublime-workspace
-
-
-
-
 .coverage
 htmlcov/
 .cache/
 .pytest_cache/
-
-
 .mypy_cache/
-
-
 pip-log.txt
 pip-delete-this-directory.txt
-
-
 pydantic_cache/
-
-
 build/
 dist/
 *.egg-info/
 .eggs/
-
-
 node_modules/
+*.gguf
+*.pth
+*.bin
+*.ckpt
 
-
+models/*.gguf
+backend/models/*.gguf
+.DS_Store
+Thumbs.db
