--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,12 @@
-fastapi
-uvicorn
-pydantic
+fastapi==0.110.0
+uvicorn==0.30.0
+python-dotenv==1.0.1
+
+langchain==0.1.20
+langchain-core==0.1.52
+langchain-community==0.0.38
+
+llama-cpp-python==0.2.60
+
+pydantic==2.7.4
+diskcache==5.6.3
